fix horiznthorizontal scroll appear in mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@
 }
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 body {
   font-family: "OpenSans-400";
@@ -160,7 +162,6 @@ button[aria-expanded="true"] .menu-icon span:nth-child(3) {
   }
 }
 .fixed-icon {
-  display: inline-block;
   z-index: 500;
   width: 40px;
   height: 40px;
@@ -172,7 +173,6 @@ button[aria-expanded="true"] .menu-icon span:nth-child(3) {
   position: fixed;
   right: 8px;
   bottom: 8px;
-  z-index: 1000;
 }
 /* End header*/
 /* start service */
